test/classes/nilability/errors/cast-nil-to-generic-6.good
cast-nil-to-generic-6.chpl:11: error: owned Row
